# leetcode

./: .gitignore  README.md  groups  project.config
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/array/: beautiful_tower_2.cpp  beautiful_towers_2.h  contains_duplicate_3.cpp  contains_duplicate_3.h  find_a_peak_element_2.cpp  find_a_peak_element_2.h  h_index_2.cpp  h_index_2.h  longest_alternating_subarray.cpp  longest_alternating_subarray.h  maximum_number_of_alloys.cpp  maximum_number_of_alloys.h  minimum_number_of_removals_to_make_mountain_array.cpp  minimum_number_of_removals_to_make_mountain_array.h  next_greater_element_4.cpp  next_greater_element_4.h  remove_stones_to_minimize_the_total.cpp  remove_stones_to_minimize_the_total.h  stamping_the_grid.cpp  stamping_the_grid.h
cpp/backtrace/: expression_add_operators.cpp  expression_add_operators.h  word_search_2.cpp  word_search_2.h
cpp/dp/: coin_change_2.cpp  coin_change_2.h  dungeon_game.cpp  dungeon_game.h  maximum_earnings_from_taxi.cpp  maximum_earnings_from_taxi.h  maximum_number_that_sum_of_the_price_ls_less_than_or_equak_to_k.cpp  maximum_number_that_sum_of_the_price_ls_less_than_or_equak_to_k.h  split_array_largest_sum.cpp  split_array_largest_sum.h
cpp/graph/: binary_search_tree_to_greater_sum_tree.cpp  binary_search_tree_to_greater_sum_tree.h  binary_tree_maximum_path_sum.cpp  binary_tree_maximum_path_sum.h  minimize_the_total_price_of_the_trips.cpp  minimize_the_total_price_of_the_trips.h  minimum_edge_weight_equilibrium_queries_in_a_tree.cpp  minimum_edge_weight_equilibrium_queries_in_a_tree.h  minimum_fuel_cost_to_report_to_the_capital.cpp  minimum_fuel_cost_to_report_to_the_capital.h  path_with_minimum_effort.cpp  path_with_minimum_effort.h  reorder_routes_to_make_all_paths_lead_to_the_city_zero.cpp  reorder_routes_to_make_all_paths_lead_to_the_city_zero.h  reverse_odd_levels_of_binary_tree.cpp  reverse_odd_levels_of_binary_tree.h  word_ladder.cpp  word_ladder.h
cpp/init/: init.cpp  init.h
cpp/interval/: count_integers_in_intervals.cpp  count_integers_in_intervals.h  maximum_subarray.cpp  maximum_subarray.h  the_skiline_problem.cpp  the_skline_problem.h
cpp/math/: max_points_on_a_line.cpp  max_points_on_a_line.h  maximum_swap.cpp  maximum_swap.h  minimum_garden_perimeter_to_collect_enough_apples.cpp  minimum_garden_perimeter_to_collect_enough_apples.h  next_greater_numerically_balanced_number.cpp  next_greater_numerically_balanced_number.h  number_of_burgers_with_no_waste_of_ingredients.cpp  number_of_burgers_with_no_waste_of_ingredients.h
cpp/utils/: binary_tree.cpp  binary_tree.h  operator.h  print.cpp  print.h  registery.cpp  regsitery.h
go/: go.mod  main.go
go/common/: single_link_list.go  single_link_list_test.go  sorted.go
go/doublePointer/: longest_substring_without_repeating_characters.go  longest_substring_without_repeating_characters_test.go
go/simulate/: arithmetic_slices.go  arithmetic_slices_test.go  battleships_in_a_board.go  battleships_in_a_board_test.go  bulls_and_cows.go  bulls_and_cows_test.go  compare_version_numbers.go  compare_version_numbers_test.go  convert_a_number_to_hexadecimal.go  convert_a_number_to_hexadecimal_test.go  delete_node_in_a_linked_list.go  delete_node_in_a_linked_list_test.go  excel_sheet_column_number.go  excel_sheet_column_number_test.go  excel_sheet_column_title.go  (+39 more)
